# sre_arena_env

./: .dockerignore  .gitignore  BLOG.md  Dockerfile  README.md  __init__.py  client.py  gen0_rewards.csv  gen0_rewards.txt  gen0_rewards_full.csv  gen1_rewards_full.csv  gen2_rewards_full.csv  hf_jobs_full_log.txt  hf_jobs_full_log_FINAL.txt  inference.py  models.py  openenv.yaml  pyproject.toml
configs/: colab_demo.yaml  l4_training.yaml
docs/superpowers/plans/: 2026-04-26-phase9-colab-notebook.md
docs/superpowers/specs/: 2026-04-26-colab-notebook-design.md
hf_jobs/: inference_demo.json  run_inference_demo.py  smoke.py  train_on_hf_jobs.py
notebooks/: _generate.py  main_training.ipynb
server/: Dockerfile  __init__.py  app.py  sre_arena_env_environment.py
server/dashboard/: index.html  sse.py
server/simulator/: attack_templates.py  rubrics.py  sim_express.py  sim_nginx.py  traffic.py
tests/: test_action_parser.py  test_alternating_loop.py  test_client_server.py  test_dashboard_sse.py  test_determinism.py  test_docker_container.py  test_env_rollout.py  test_hf_space_live.py  test_opponent_loader.py  test_plots.py  test_prompts.py  test_reward_shape.py  test_scripted_attacker.py  test_scripted_defender.py  test_sim_unit.py  test_train_attacker_unit.py  test_train_defender_unit.py
training/: __init__.py  action_parser.py  alternating_loop.py  dataset_builder.py  opponent_loader.py  plots.py  prompts.py  reward_function.py  scripted_attacker.py  scripted_defender.py  train_attacker.py  train_defender.py
