# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-sre_arena_env"
version = "0.1.0"
description = "Sre Arena Env environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    # Core OpenEnv runtime (provides FastAPI server + HTTP client types)
    # install from github
    # "openenv-core[core] @ git+https://github.com/meta-pytorch/OpenEnv.git",
    "openenv-core[core]>=0.2.3",
    # Environment-specific dependencies
    # Add all dependencies needed for your environment here
    # Examples:
    # "numpy>=1.19.0",
    # "torch>=2.0.0",
    # "gymnasium>=0.29.0",
    # "openspiel>=1.0.0",
    # "smolagents>=1.22.0,<2",
    "fastapi>=0.136.0",
    "uvicorn>=0.45.0",
    "pydantic>=2.13.0",
    "httpx>=0.28.1",
    "sse-starlette>=3.0.0",
    "aiohttp==3.13.5",
    "pyyaml>=6.0.2",
    "datasets>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.8.0",
]
training = [
    "trl>=0.21.0,<0.25",
    "peft>=0.14.0",
    "transformers>=4.47.0",
    "bitsandbytes>=0.45.0",
]

[project.scripts]
# Server entry point - enables running via: uv run --project . server
# or: python -m sre_arena_env.server.app
server = "sre_arena_env.server.app:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "docker: requires Docker daemon — run manually with pytest -m docker",
    "hf_space: requires live HF Space — run manually with pytest -m hf_space",
]

[tool.setuptools]
include-package-data = true
packages = ["sre_arena_env", "sre_arena_env.server", "sre_arena_env.server.dashboard", "sre_arena_env.training"]
package-dir = { "sre_arena_env" = ".", "sre_arena_env.server" = "server" }

[tool.setuptools.package-data]
"sre_arena_env.server.dashboard" = ["*.html"]